...
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Text to reverse" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qYA-0h-7n2">
                                <rect key="frame" x="16" y="293" width="343" height="33"/>
                                <accessibility key="accessibilityConfiguration" identifier="inputField"/>
                                <rect key="contentStretch" x="1" y="0.0" width="1" height="1"/>
                                <constraints>
...
                                <rect key="frame" x="20" y="934" width="728" height="60"/>
                                <color key="backgroundColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="reverseButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="60" id="gKG-Cs-hVu"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This application will reverse your words. Please type text below " textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstra
                                <rect key="frame" x="25" y="157" width="325" height="106"/>
                                <accessibility key="accessibilityConfiguration" identifier="infoLabel"/>
                                <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="17"/>
                                <color key="textColor" systemColor="secondaryLabelColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
...
                                <rect key="frame" x="16" y="341" width="343" height="32"/>
                                <segments>
                                    <segment title="Default"/>
                                    <segment title="Custom"/>
                                </segments>
                                <connections>
...
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Text to ignore" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7ll-IH-bHZ">
                                <rect key="frame" x="25" y="388.5" width="325" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="rulesField"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="12" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uac-kW-bMu">
                                <rect key="frame" x="16" y="425" width="343" height="85"/>
                                <accessibility key="accessibilityConfiguration" identifier="resultLabel"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="85" id="eML-V9-15h"/>
...
                        <outlet property="reverseButton" destination="heK-Do-h1f" id="ndF-sa-mur"/>
                        <outlet property="reverseResultLabel" destination="uac-kW-bMu" id="iZ8-nv-u4p"/>
                        <outlet property="reverseSegments" destination="WfD-aX-yxc" id="KlV-fa-Wlf"/>
                        <outlet property="textField" destination="qYA-0h-7n2" id="q7e-XT-ICJ"/>
                    </connections>
...
